# fact-checking-scraper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLANS.md  README.md  analise_spiders_comentarios.md  projeto.md  pyproject.toml
configs/: schedule.yaml
docs/: analysis.md  design.md  schema.json  spider_extraction_quality_review.md  spiders.md  user_guide.md
notebooks/: 01_runs_metadata.ipynb  02_data_quality.ipynb  99_processed_snapshot.ipynb  eda_utils.py
notebooks/spiders/: afp_checamos_eda.ipynb  agencia_lupa_eda.ipynb  aos_fatos_eda.ipynb  boatos_org_eda.ipynb  e_farsas_eda.ipynb  estadao_verifica_eda.ipynb  g1_fato_ou_fake_eda.ipynb  observador_eda.ipynb  poligrafo_eda.ipynb  publico_eda.ipynb  reuters_fact_check_eda.ipynb  uol_confere_eda.ipynb
src/factcheck_scrape/: __init__.py  cli.py  dedupe.py  logging.py  middlewares.py  pipelines.py  quality.py  report.py  runner.py  scheduler.py  schema.py  storage.py  text_cleanup.py  utils.py
src/factcheck_scrape/analysis/: __init__.py  processing.py  profiles.py  runs.py
src/factcheck_scrape/spiders/: __init__.py  afp_checamos.py  agencia_lupa.py  aosfatos.py  base.py  boatos_org.py  e_farsas.py  estadao_verifica.py  (+7 more)
tests/: conftest.py  helpers.py  test_analysis.py  test_canonicalization.py  test_cli.py  test_dedupe.py  test_integration.py  test_json_schema_validation.py  test_middlewares.py  test_quality.py  test_report.py  test_runner_settings.py  test_schema.py  test_smoke.py  test_spider_edge_cases.py  test_spiders.py  test_storage.py  test_text_cleanup.py  test_uol_confere_pagination.py
(+38 files in other folders)
